--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ h2 {
 #header {
 	background-color: #d73f09;
 	color: white;
-	padding: 20px;
-	font-size: 25px;
+	padding: 1%;
+	font-size: 150%;
 	font-weight: bold;
 	position: relative;
 	bottom: 35px;
@@ -44,7 +44,7 @@ h2 {
 
 #main-photo {
 	width: -webkit-fill-available;
-	margin: -300px 0px -50px 0px;
+	margin: -20% 0px -5% 0px;
 	filter: brightness(0.6);
 }
 
@@ -56,12 +56,12 @@ h2 {
 }
 
 #main-photo-caption {
-	font-size: 100px;
+	font-size: 600%;
 	font-family: fantasy;
 }
 
 #main-photo-subcaption {
-	font-size: 30px;
+	font-size: 200%;
 	font-family: "ui-sans-serif";
 }
 
@@ -74,7 +74,7 @@ h2 {
 
 #introduction {
 	text-align: center;
-	margin: 0px 0px 60px 0px;
+	margin: 0px 0px 5% 0px;
 }
 
 #intro-text {
@@ -86,7 +86,7 @@ h2 {
 .block {
 	flex-wrap: wrap;
 	text-align: center;
-	margin-bottom: 30px;
+	margin-bottom: 2%;
 }
 
 .block-photo {
@@ -94,12 +94,12 @@ h2 {
 }
 
 .block-text {
-	padding: 0px 100px 0px 100px;	
+	padding: 0px 15% 0px 15%;	
 }
 
 #social-media {
 	background-color: #d73f09;
-	padding: 20px;
+	padding: 1%;
 	text-align: center;
 }
 
@@ -108,6 +108,6 @@ h2 {
 	background-color: black;
 	color: #b7b7b7;
 	text-align: center;
-	padding: 60px;
+	padding: 2%;
 }
 
