--- a/style.css
+++ b/style.css
@@ -51,8 +51,10 @@ h2 {
 
 #main-photo-words {
 	text-align: center;
-	position: relative;
-	bottom: 560px;
+	position: absolute;
+	top: 20%;
+	left: 0;
+	right: 0;
 	color: white;
 }
 
@@ -68,8 +70,8 @@ h2 {
 
 #content {
 	background-color: white;
-	position: relative;
-	bottom: 400px;
+	position: absolute;
+	bottom: 60%;
 	padding: 3% 12% 0% 12%;
 }
 
