--- a/style.css
+++ b/style.css
@@ -73,6 +73,8 @@ h2 {
 	position: absolute;
 	top: 60%;
 	padding: 3% 12% 0% 12%;
+	width: -webkit-fill-available;
+	min-height: 40%;
 }
 
 #introduction {
@@ -104,6 +106,7 @@ h2 {
 footer {
 	position: absolute;
 	bottom: 0;
+	width: -webkit-fill-available;
 }
 
 #social-media {
