--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h2 {
 	background-color: white;
 	position: absolute;
 	top: 60%;
-	padding: 3% 12% 0% 12%;
+	padding: 3% 0% 0% 0%;
 	width: -webkit-fill-available;
 	min-height: 40%;
 }
@@ -80,7 +80,7 @@ h2 {
 #introduction {
 	text-align: center;
 	margin: 0px 0px 5% 0px;
-	padding: 0% 15% 0% 15%;
+	padding: 0% 25% 0% 25%;
 }
 
 #intro-text {
@@ -88,6 +88,9 @@ h2 {
 	padding: 0% 5% 0% 5%;
 }
 
+#blocks {
+	padding: 0% 20% 15% 20%;	
+}
 
 .block {
 	flex-wrap: wrap;
