--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h2 {
 	color: white;
 	padding: 1%;
 	font-size: 150%;
-	font-weight: bold;
+	font-family: fantasy;
 	position: absolute;
 	top: 0px;
 	width: -webkit-fill-available;
